--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <p>Please log in to continue</p>
 	<div id="g_id_onload"
         data-client_id="526864823942-93igje3cdb5t9hqj7quj93hroklvnbtq.apps.googleusercontent.com"
-        data-login_uri="http://did.socialvr.net/oauth2/google"
+        data-login_uri="https://did.socialvr.net/oauth2/google"
         data-auto_prompt="false">
     </div>
     <div class="g_id_signin"
